--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,103 @@
-:root{
-    --blue:#80A6B8;
-    --brown:#B89280;
-    --cream:#fefbef;
-    --deep-purple:#9280B8;
-    --green:#8AB880;
-    --lt-blue:#EBF5FA;
-    --lt-brown:#F6F2EF;
-    --lt-green:#edfcea;
-    --lt-lavender:#F5EFF6;
-    --lt-mauve:#B880A6;
-    --mauve:#ae80b8;
-    --md-mauve:#995FA6;
-    --ltpurple-gradient: linear-gradient( 106.5deg, rgba(174, 128, 184, .91)23%, rgba(146, 128, 184, 0.8)93% );
-    --purple-gradient: linear-gradient( 106.5deg, rgb(174, 128, 184)23%, rgb(146, 128, 184)93% );
-   
+:root {
+  --blue: #80a6b8;
+  --brown: #b89280;
+  --cream: #fefbef;
+  --deep-purple: #9280b8;
+  --dk-purple:#42208a;
+  --dk-brown:#7A5544;
+  --green: #8ab880;
+  --lt-blue: #ebf5fa;
+  --lt-brown: #f6f2ef;
+  --lt-green: #edfcea;
+  --lt-lavender: #f5eff6;
+  --lt-mauve: #b880a6;
+  --mauve: #ae80b8;
+  --md-mauve: #995fa6;
+  --lt-gradient: linear-gradient(
+    180deg,
+    var(--lt-lavender) 23%,
+    var(--mauve) 93%
+  );
+  --ltpurple-gradient: linear-gradient(
+    106.5deg,
+    rgba(174, 128, 184, 0.91) 23%,
+    rgba(146, 128, 184, 0.8) 93%
+  );
+  --purple-gradient: linear-gradient(
+    106.5deg,
+    rgb(174, 128, 184) 23%,
+    rgb(146, 128, 184) 93%
+  );
 }
-body{
-    background: var(--purple-gradient);
+body {
+  background: var(--purple-gradient);
+  /* font-family: 'Acme', sans-serif; */
+  /* font-family: 'Shadows Into Light Two', cursive; */
+}
+h1 {
+  color: var(--cream);
+  font-family: "Comic Neue", serif;
+  font-size: 2.5em;
+  text-align: center;
+  font-weight: 700;
+}
+main {
+  margin: 30px auto 5px;
+  display: flex-vertical;
+  max-width: 600px;
+  background: var(--lt-gradient);
+  border-radius: 10px;
+  min-height: 400px;
+  padding: 20px;
+  box-shadow: 5px 5px 10px var(--lt-lavender);
+}
+
+#poem-topic{
+    font-family: 'Delius', serif;
+    font-size: 1em;
+    min-width: 300px;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid var(--brown);
+    background: var(--lt-brown);
+    color:var(--brown);
+    box-shadow: 3px 3px 5px var(--brown);
+    display: block;
+    margin: 2px auto;
+    text-align: center;
 
 }
-h1{
-    color: var(--cream);
 
-}
-footer{
-    color: var(--lt-green);
-}
-footer a{
+.button{
+    background: var(--brown);
+    display: block;
+    margin:5px auto 10px;
+    padding: 8px;
+    min-width: 70px;
+    border-radius: 5px;
+    font-family: 'Delius', serif;
+    font-size: 1em;
     color: var(--lt-brown);
+    border: none;
+    box-shadow: 3px 3px 5px var(--deep-purple);
+}
+
+#ai-poem{
+    text-align: center;
+    font-family: 'Delius', serif;
+    font-size: 1.3em;
+    line-height: 2.0;
+    color: var(--dk-brown);
+    margin: 10px 0 5px;
+
+}
+#footer {
+  color: var(--cream);
+  text-align: center;
+  font-family: "Comic Neue", serif;
+  font-weight: 700;
+  font-size: .8em;
+}
+#footer a {
+  color: var(--dk-purple);
 }
