--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ body {
   /* font-family: 'Acme', sans-serif; */
   /* font-family: 'Shadows Into Light Two', cursive; */
 }
-h1 {
+.title {
   color: var(--cream);
   font-family: "Comic Neue", serif;
   font-size: 2.5em;
@@ -85,11 +85,23 @@ form {
 }
 
 #ai-poem {
-  font-family: "Delius", serif;
+  font-family: "Comic Neue", serif;
   font-size: 1.3em;
-  line-height: 2;
-  color: var(--dk-brown);
+  line-height: 1.5;
+  color: var(--dk-purple);
   margin: 25px 10px 5px;
+}
+#ai-poem h2 {
+  font-family: "Comic Neue", serif;
+  font-weight: 700;
+  line-height: 1;
+  color: var(--dk-brown);
+}
+#ai-poem h3 {
+  font-family: "Comic Neue", serif;
+  font-weight: 700;
+  line-height: 1;
+  color: var(--dk-purple);
 }
 #footer {
   color: var(--cream);
