--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
   --dk-purple: #42208a;
   --dk-brown: #7a5544;
   --green: #8ab880;
+  --grey:#595E60;
   --lt-blue: #ebf5fa;
   --lt-brown: #f6f2ef;
   --lt-green: #edfcea;
@@ -13,66 +14,60 @@
   --lt-mauve: #b880a6;
   --mauve: #ae80b8;
   --md-mauve: #995fa6;
-  --lt-gradient: linear-gradient(
-    180deg,
-    var(--lt-lavender) 23%,
-    var(--mauve) 93%
-  );
-  --ltpurple-gradient: linear-gradient(
-    106.5deg,
-    rgba(174, 128, 184, 0.91) 23%,
-    rgba(146, 128, 184, 0.8) 93%
-  );
-  --purple-gradient: linear-gradient(
-    106.5deg,
-    rgb(174, 128, 184) 23%,
-    rgb(146, 128, 184) 93%
-  );
+  --silver:#B0B7C0;
+ 
+ 
 }
 body {
-  /* background-image: url('/images/pencilsunsplash.jpg');
-    background-repeat: no-repeat; */
+  background-image: url('/images/green-chalkboard.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 
-  background: var(--md-mauve);
+  /* background: var(--md-mauve); */
   /* font-family: 'Acme', sans-serif; */
   /* font-family: 'Shadows Into Light Two', cursive; */
 }
 .title {
-  color: var(--cream);
-  font-family: "Comic Neue", serif;
+  color: var(--dk-brown);
+  font-family: "Delius", serif;
   font-size: 2.5em;
   text-align: center;
   font-weight: 700;
+  background: var(--silver);
+  padding-bottom: 20px;
+padding-top: 10px;
+  margin-bottom: 0px;
+  border-radius: 50px 50px 10px 10px;
 }
 main {
-  margin: 30px auto 5px;
+  margin: 0px auto 5px;
   display: flex-vertical;
   max-width: 600px;
-  background: var(--lt-gradient);
+  background: var(--dk-brown);
   border-radius: 10px;
   min-height: 400px;
   padding: 20px;
-  box-shadow: 5px 5px 10px var(--lt-lavender);
+  box-shadow: 5px 5px 10px var(--lt-green);
 }
 form {
   display: flex;
 }
 #poem-topic {
   font-family: "Delius", serif;
-  font-size: 1em;
+  font-size: 1.5em;
   width: 80%;
-
   border-radius: 5px;
   border: 1px solid var(--brown);
   background: var(--lt-brown);
-  color: var(--brown);
+  color: var(--dk-brownbrown);
   box-shadow: 3px 3px 5px var(--brown);
   margin: 2px 2px 2px 10px;
   text-align: center;
 }
 
 .button {
-  background: var(--dk-brown);
+  background: var(--brown);
   margin: 2px 5px 2px;
   padding: 10px 15px;
   max-width: 40%;
@@ -81,15 +76,21 @@ form {
   font-size: 1em;
   color: var(--lt-brown);
   border: none;
-  box-shadow: 3px 3px 5px var(--brown);
+  box-shadow: 3px 3px 5px var(--silver);
 }
+.paper{
+    background: url("/images/crumpled-paper.png");
+    border-radius: 5px;
+    
 
+}
 #ai-poem {
-  font-family: "Comic Neue", serif;
-  font-size: 1.3em;
+  font-family: "Caveat", serif;
+  font-size: 1.5em;
   line-height: 1.5;
-  color: var(--dk-purple);
+  color: var(--grey);
   margin: 25px 10px 5px;
+  padding-top: 5px;
 }
 #ai-poem h2 {
   font-family: "Comic Neue", serif;
@@ -107,9 +108,32 @@ form {
   color: var(--cream);
   text-align: center;
   font-family: "Comic Neue", serif;
-  font-weight: 700;
+  font-weight: 200;
   font-size: 0.8em;
 }
 #footer a {
-  color: var(--dk-purple);
+  color: var(--lt-green);
+  font-weight: 700;
 }
+/* @media screen and (min-width: 430px) {
+  h1{
+    font-size: 2.8em;
+  }
+  h2 {
+    font-size: 1.8em;
+  }
+  .time {
+    font-size: 2.3em;
+  }
+}
+@media screen and (min-width: 600px) {
+  h1{
+    font-size: 3.5em;
+  }
+  h2 {
+    font-size: 2.5em;
+  }
+  .time {
+    font-size: 3em;
+  }
+} */
